--- a/package.json
+++ b/package.json
@@ -16,14 +16,20 @@
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "fs": "^0.0.1-security",
+    "highlight.js": "11.11.1",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-code-blocks": "0.0.9-0",
     "react-dom": "18.2.0",
     "react-syntax-highlighter": "^15.5.0",
+    "rehype-highlight": "7.0.2",
+    "remark": "15.0.1",
+    "remark-gfm": "4.0.1",
+    "remark-html": "16.0.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "0.5.16",
     "@types/node": "^18.11.18",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
